--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -64,3 +64,21 @@ h1, h2, h3, h4 {
 h2{
   color: var(--color-primary);
 }
+
+p{
+  max-width: 60ch
+}
+
+
+ul:not([class]){
+  li:not([class]){
+    padding:var(--space-s);
+    padding-left: 0;
+    font-size: 1.2em;
+    &::before{
+      content: ""; width: var(--space); height: var(--space);  background-color: var(--color-primary); display: inline-block;
+      border-radius: 50%;
+      margin-right: var(--space);
+    }
+  }
+}
