--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -23,12 +23,13 @@ h4 {
 }
 
 
-h1{
+h1 {
   font-size: clamp(2em, 4vw, 4em);
 }
- h2 {
+
+h2 {
   font-size: clamp(1.5em, 3vw, 3em);
- }
+}
 
 h1,
 h2,
@@ -37,7 +38,8 @@ h4,
 h5,
 h6,
 p,
-blockquote,.button-group {
+blockquote,
+.button-group {
 
   &+h1,
   &+h2,
@@ -53,32 +55,47 @@ blockquote,.button-group {
 }
 
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: var(--color-foreground);
+
   &:has(strong) {
     font-weight: normal;
   }
 }
 
 
-h2{
+h2 {
   color: var(--color-primary);
 }
 
-p{
+p {
   max-width: 60ch
 }
 
 
-ul:not([class]){
-  li:not([class]){
-    padding:var(--space-s);
+ul:not([class]) {
+  li:not([class]) {
+    padding: var(--space-s);
     padding-left: 0;
     font-size: 1.2em;
-    &::before{
-      content: ""; width: var(--space); height: var(--space);  background-color: var(--color-primary); display: inline-block;
+
+    &::before {
+      content: "";
+      width: var(--space);
+      height: var(--space);
+      background-color: var(--color-primary);
+      display: inline-block;
       border-radius: 50%;
       margin-right: var(--space);
     }
   }
+}
+
+
+h2+p {
+  font-size: 1.2em;
+  line-height: 1.6;
 }
