--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -18,6 +18,7 @@ body {
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to right bottom, var(--color-background),color-mix(in srgb, var(--color-background),var(--color-primary) 50%));
 }
 
 * {
