--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -30,6 +30,15 @@ h1 {
 h2 {
   font-size: clamp(1.5em, 3vw, 3em);
 }
+h1,h2{
+  &:has(strong){
+
+  }
+  strong{
+    display: block;
+    font-weight: normal;
+  }
+}
 
 h1,
 h2,
@@ -68,7 +77,7 @@ h4 {
 
 
 h2 {
-  color: var(--color-primary);
+  color: currentColor;
 }
 
 p {
@@ -90,6 +99,31 @@ ul:not([class]) {
       display: inline-block;
       border-radius: 50%;
       margin-right: var(--space);
+    }
+  }
+}
+
+ol:not([class]){
+  counter-reset: list;
+  li:not([class]){
+    padding: var(--space-s);
+    padding-left: 0;
+    font-size: 1.2em;
+    counter-increment: list;
+    position: relative;
+
+    &::before{
+      position: absolute;
+      right: 100%
+      ;top: 0;
+      content: counter(list);
+      width: 1.5em;
+      height: 1.5em;
+      background-color: var(--color-primary);
+      display: inline-block;
+      border-radius: 50%;
+      line-height: 1.5;
+      text-align: center;
     }
   }
 }
